// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<PostTags /> > should should match snapshot 1`] = `
.c0 {
  margin: 2.4rem auto;
  max-width: 80rem;
  padding: 0 3.2rem 0;
}

.c0 span {
  margin: 0 0rem 0 0.5rem;
}

.c0 span::before {
  content: " ";
}

.c0 span::after {
  content: ", ";
}

.c0 span:last-child::after {
  content: "";
}

.c0 a:hover {
  filter: brightness(80%);
}

<div>
  <p
    class="c0"
  >
    tags:
     
    <span>
      <a
        href="/tag/bc"
      >
        BC
      </a>
    </span>
    <span>
      <a
        href="/tag/bc2"
      >
        BC2
      </a>
    </span>
  </p>
</div>
`;

exports[`<PostTags /> > should should match snapshot with no tags 1`] = `
.c0 {
  margin: 2.4rem auto;
  max-width: 80rem;
  padding: 0 3.2rem 0;
}

.c0 span {
  margin: 0 0rem 0 0.5rem;
}

.c0 span::before {
  content: " ";
}

.c0 span::after {
  content: ", ";
}

.c0 span:last-child::after {
  content: "";
}

.c0 a:hover {
  filter: brightness(80%);
}

<div>
  <p
    class="c0"
  >
    tags:
     
  </p>
</div>
`;
